--- a/admin.html
+++ b/admin.html
@@ -255,11 +255,11 @@
             <div class="d-grid gap-2 col-6 mx-auto"><button type="submit" class="btn btn-primary">Save</button></div>
         </form>
         <!-- Spinner -->
-        <div id="loadingSpinner" class="d-none">
+        <div id="loadingSpinner" class="d-none position-fixed top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center bg-white bg-opacity-50" style="z-index: 1050;">
             <div class="spinner-border text-primary" role="status">
                 <span class="visually-hidden">Loading...</span>
             </div>
-        </div>  
+        </div>          
     </div>
     <!-- Toast Section -->
     <div class="toast-container position-fixed top-0 end-0 p-3">
