--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Welcome to my portfolio! Here, you'll find a showcase of my work, skills, and projects in the field of data. Explore my journey as a data professional, where I combine analytical expertise and creativity to deliver impactful insights and solutions.</p>
+        <p>Welcome to my portfolio section! Here, you’ll find a curated collection of my projects and professional work. From data visualization and analysis to application development, each project reflects my ability to turn data into meaningful insights and innovative solutions. Explore how I leverage tools like Python, SQL, and Excel to deliver impactful results.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -332,7 +332,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Blog</h2>
-        <p>Explore our latest articles, insights, and updates. Stay informed and inspired with our curated content.</p>
+        <p>Stay updated with industry trends, best practices, and helpful guides. My blog is where I share knowledge on web development, SEO, UI/UX design, and clean coding practices. Whether you're just starting or looking to refine your skills, these articles aim to inform and inspire.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -419,7 +419,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Testimonials</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>See what clients, collaborators, and colleagues say about working with me. These testimonials highlight the quality, dedication, and professionalism I bring to every project. Real stories from real experiences.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -531,7 +531,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Have a question, project idea, or just want to say hi? I’d love to hear from you! Whether you're looking to work together or simply want to chat about data, design, or development—feel free to reach out. I'm always open to new opportunities and meaningful conversations.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -659,10 +659,6 @@
     </div>
 </div>
 
-  <!-- Frontend js -->
-  <script src="assets/js/config.js"></script> 
-  <script src="assets/js/index.js"></script>
-
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
@@ -674,6 +670,9 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
+  <!-- Frontend js -->
+  <script src="assets/js/config.js"></script> 
+  <script src="assets/js/index.js"></script>
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
